--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "node-sass": "^4.10.0"
   }
 }
